# ghstats2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: collect.yml
config/: config.example.yaml  repos.yaml
data/: stats.parquet
reports/: analysis.ipynb  dashboard.html
src/ghstats2/: __init__.py  __main__.py  cli.py  collector.py  config.py  github_client.py  models.py  report.py  storage.py
tests/: __init__.py  conftest.py  test_cli.py  test_github_client.py  test_storage.py
